---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
---
./resources/test/fixtures/flake8_quotes/docstring_doubles_module_multiline.py:4:1: Q001 [*] Double quote multiline found but single quotes preferred
   |
 4 |   Double quotes multiline module docstring
 5 |   """
 6 | / """
 7 | | this is not a docstring
 8 | | """
   | |___^ Q001
 9 |   def foo():
10 |       pass
   |
   = help: Replace double multiline quotes with single quotes

ℹ Suggested fix
1 1 | """
2 2 | Double quotes multiline module docstring
3 3 | """
4   |-"""
  4 |+'''
5 5 | this is not a docstring
6   |-"""
  6 |+'''
7 7 | def foo():
8 8 |     pass
9 9 | """

./resources/test/fixtures/flake8_quotes/docstring_doubles_module_multiline.py:9:1: Q001 [*] Double quote multiline found but single quotes preferred
   |
 9 |   def foo():
10 |       pass
11 | / """
12 | | this is not a docstring
13 | | """
   | |___^ Q001
   |
   = help: Replace double multiline quotes with single quotes

ℹ Suggested fix
6  6  | """
7  7  | def foo():
8  8  |     pass
9     |-"""
   9  |+'''
10 10 | this is not a docstring
11    |-"""
   11 |+'''


